# someplace-aproto-l7vfs5nzmiupwq2w9hm3e4kw0

./: .gitignore  .gitmodules  Makefile  Makefile.am  aproto.txt  aproto_low_dec.c  aproto_old.txt  aproto_opcodes.sh  aproto_test.c  aproto_thzuygkrkpuh9yxge9dksr59e.h  autogen.sh  configure.ac  field_data_types.txt  gen_test_cases.sh  new_decimals.txt  new_encoding.txt  types.txt
